--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+:root {
+    --pixelWidth: 50px;
+    --pixelMargin: 2px;
+    --didgitWidth: calc(var(--pixelWidth)*3 + var(--pixelMargin)*6);
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -6,13 +12,46 @@ body {
 .container {
     height: 100vh;
     width: 100vw;
-    background-color: #696969;
+    background-image: linear-gradient(120deg, #1a9187, #3ea1ac, #0b688a);
     display: flex;
 }
 
-.clock {
+#clockContainer {
     margin: auto;
-    height: 150px;
-    width: 300px;
-    background-color: white;
+    display: flex;
+
+}
+
+.didgitContainer {
+    margin: 10px;
+    display: flex;
+}
+
+.didgit {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 10px;
+    width: var(--didgitWidth)
+}
+
+.digitBlock {
+    width: var(--pixelWidth);
+    height: var(--pixelWidth);
+    background-color: #eee;
+    margin: var(--pixelMargin);
+    box-shadow: 0px 3px 3px 0px rgba(112, 112, 112, 0.7);
+    transition: all ease-in 0.2s;
+    transform: scale(0);
+}
+
+.showPixel {
+    transform: scale(1);
+}
+
+.hidePixel {
+    transform: scale(0);
+}
+
+.reds {
+    background-color: red;
 }
